Booktests are passing and books,authors models working

--- a/Library.Tests/Library.Tests.csproj
+++ b/Library.Tests/Library.Tests.csproj
@@ -9,6 +9,6 @@
     <PackageReference Include="MySqlConnector" Version="0.29.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Todolist\todolist.csproj" />
+    <ProjectReference Include="..\Library\Library.csproj" />
   </ItemGroup>
 </Project>
